<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.main_stay.com.erudito.main_stay.Classes.ResetPassword"
    tools:showIn="@layout/activity_reset_password"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtcurrentpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_current_password"
        android:inputType="textPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/black"
        android:backgroundTint="#9B9B9B"
        android:textSize="@dimen/profile_texts" />

    <EditText
        android:id="@+id/txtnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#9B9B9B"
        android:textColor="@android:color/black"
        android:textSize="@dimen/profile_texts" />

    <EditText
        android:id="@+id/txtconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#9B9B9B"
        android:textColor="@android:color/black"
        android:textSize="@dimen/profile_texts" />


</LinearLayout>
