<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erudito"
        android:textSize="40dp"
        android:textColor="#3C445F"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="by"
        android:textSize="25dp"
        android:textColor="#3C445F"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_login_screen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="3dp"
        android:paddingRight="11dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/username_label"
        android:textColor="@color/placeholdercolor"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9B9B9B"
        android:drawablePadding="10dp"
        android:hint="@string/username_hint"
        android:imeOptions="actionUnspecified"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="2dp"
        android:paddingRight="11dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="#9B9B9B"
        android:fontFamily="@font/poppinsregular"
        android:textSize="16dp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="11dp"
            android:paddingRight="11dp"
            android:paddingLeft="3dp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/placeholdercolor"
            android:text="@string/password_label"
            android:textSize="16dp" >

        </TextView>

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="11dp"
        android:backgroundTint="#9B9B9B"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:imeActionLabel=""
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="2dp"
        android:paddingRight="11dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="#9B9B9B"
        android:textSize="16dp"
        android:fontFamily="@font/poppinsregular"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtforgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/poppinsregular"
        android:gravity="right"
        android:paddingRight="11dp"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/gifBluefaint"

        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_new_continue"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16dp" />


    <TextView
        android:id="@+id/txttandc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:paddingLeft="3dp"
        android:paddingRight="11dp"
        android:textColor="@android:color/black"
        android:textSize="12dp" />


</LinearLayout>
