<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.main_stay.fragment.Notifications">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/mainrelay"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titletext1"
            android:text="My Profile"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:gravity="center" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_landing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/login_background" />


                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/uploadprofilepic"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/img_background"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-70dp"
                    android:src="@android:drawable/ic_menu_camera"
                    app:civ_border="false"
                    app:civ_shadow="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/student_name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_below="@+id/uploadprofilepic"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:text="@string/general" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:id="@+id/linlaymybatch"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/profile_texts"
                        android:layout_weight="0.9"
                        android:text="@string/lbl_my_batch"
                        android:drawableLeft="@drawable/my_batch_profile"
                        android:drawablePadding="15dp"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_open_arrow"
                        android:layout_gravity="center" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEEEE">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:drawableLeft="@drawable/result_achievements_profile"
                        android:drawablePadding="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/profile_texts"
                        android:text="@string/lbl_results_achievements" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_open_arrow"
                        android:layout_gravity="center" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEEEE">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp"
                    android:id="@+id/linlaybookmarkslist"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookmarkslinlay"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/my_bookmarks_profile"
                            android:drawablePadding="23dp"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/profile_texts"
                            android:text="@string/lbl_bookmarks" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@android:color/white"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:layout_marginLeft="15dp"
                            android:padding="2dp"
                            android:gravity="center"
                            android:visibility="gone"
                            android:background="@drawable/bookmark_badge_circle"
                            android:id="@+id/txtbookmarkcount" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_open_arrow"
                        android:layout_gravity="center" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/lbl_settings" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/linlayedtpersonaldetails"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/profile_texts"
                        android:layout_weight="0.9"
                        android:text="@string/lbl_edit_personal_details"
                        android:drawableLeft="@drawable/password_profile"
                        android:drawablePadding="21dp"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_open_arrow"
                        android:layout_gravity="center" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/linlayabout"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:drawableLeft="@drawable/about_profile"
                        android:drawablePadding="21dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/profile_texts"
                        android:text="@string/lbl_about" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_open_arrow"
                        android:layout_gravity="center" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:background="#EEEEEE" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/linlaylogout"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:drawableLeft="@drawable/about_profile"
                        android:drawablePadding="21dp"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/profile_texts"
                        android:text="@string/lbl_logout" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

